# expense-tracker-api

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: main.py
app/config/: database.py
app/router/: expense_router.py  user_router.py
app/schemas/: expenses_schema.py  user_schema.py
app/services/: auth_service.py  expenses_service.py  user_service.py
app/utils/: settings.py
